# job_garden

./: .coverage  .env_template  .gitignore  README.md  config.py  main.py  pyproject.toml
src/: api.py  base.py  files.py  utils.py  vacancy.py
tests/: conftest.py  test_api.py  test_files_jsonsaver.py  test_utils.py  test_vacancy.py
