[project]
name = "job-garden"
version = "0.1.0"
description = ""
authors = [
    {name = "Ekaterina Chernyshova",email = "newfatto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"


[tool.poetry.dependencies]
python-dotenv = "^1.1.1"



[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
isort = "^6.0.1"
mypy = "^1.17.1"
black = "^25.1.0"

[tool.pytest.ini_options]
addopts = "--cov"

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true  # Будет требовать аннотации для всех функций
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''
